--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
     "react": "^19.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1"
   },
